syntax = "proto3";

package user;
option java_package = "com.tencent.attribution.proto.user";
option go_package = "github.com/TencentAd/attribution/attribution/proto/user";

// 用户信息，主要包含支持的id体系
message UserData {
  string imei = 1;        // android imei md5
  string idfa = 2;        // ios idfa md5
  string qq_openid = 3;   // qq openid
  string wuid = 4;        // wuid
  string mac = 5;         // mac
  string android_id = 6;  // android id
  string qadid = 7;       // qadid
  repeated string mapped_android_id = 8; // 用多版本mappping到的androidid
  repeated string mapped_mac = 9;        // 用多版本Mappping到的mac
  string taid = 10;             // taid
  string oaid = 11;             // oaid
  string hash_oaid = 12;        // hash oaid
  string uuid = 13;             // uuid
  string ip = 14;   // 媒体投放系统获取的用户终端的公共IPV4地址
  string ipv6 = 15; // 媒体投放系统获取的用户终端的公共IPV6地址
}

// 用户id类型
enum IdType {
  RetrievalId = 0;
  Device = 1;
  QQOpenId = 2;
  Wuid = 3;
  Mac = 4;
  AndroidId = 5;
  Qadid = 6;
  MappedAndroidId = 7;
  MappedMac = 8;
  Taid = 9;
  Oaid = 10;
  HashOaid = 11;
  Uuid = 12;
}